[package]
name = "mqttpal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
pretty_env_logger = "0.5.0"
actix = "0.13.1"
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web-actors = "4.2.0"
base64 = "0.21.2"
futures-util = "0.3.28"
askama = "0.12.0"
dotenv = "0.15.0"
tokio = "1.32.0"
serde = { version = "1.0.171", features = ["derive"] }
chrono = "0.4.26"
clap = { version = "4.3.19", features = ["derive"] }
rumqttc = { version = "0.22.0", features = ["url"] }
redis = { version = "0.23.3", features = ["r2d2", "aio", "cluster-async", "tokio-comp", "keep-alive"] }
bb8 = "0.8.1"
bb8-redis = "0.13.1"
serde_json = "1.0.108"
rand = "0.8.5"
