[package]
name = "mqttpal-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.19.0", features = ["crossterm"]}
mqttmonitor = { path = "../mqttmonitor/" }
crossterm = "0.26.0"
clap = { version = "4.1.6", features = ["derive"]}
