[package]
name = "mqttweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
pretty_env_logger = "0.5.0"
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
base64 = "0.21.2"
futures-util = "0.3.28"
askama = "0.12.0"
dotenv = "0.15.0"
serde = { version = "1.0.171", features = ["derive"] }
